tests/baselines/reference/asyncDeclare_es5.errors.txt
tests/cases/conformance/async/es5/asyncDeclare_es5.ts(1,9): error TS1040: 'async' modifier cannot be used in an ambient context.


==== tests/cases/conformance/async/es5/asyncDeclare_es5.ts (1 errors) ====
    declare async function foo(): Promise<void>;
            ~~~~~
!!! error TS1040: 'async' modifier cannot be used in an ambient context.